--- a/app/views/pages/application.ejs
+++ b/app/views/pages/application.ejs
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
 
     <script>
        
@@ -27,15 +28,20 @@
 </head>
 
 <body>
-    <%- include ("../layouts/navbar.ejs") -%>
-    <form >
+    <div>
+        <%- include ("../layouts/sidebar.ejs") -%>
     </div>
+    <div class="content">
+    <form >
+ 
     <h1>Application</h1>
+    <hr>
     <a class="btn btn-secondary" href="/pagecontrol">addData</a>
+  
     <div class="card-body">
         <% if(data.length){ %>
          
-        <table id="dsTable" class="table">
+        <table id="Application" class="table">
             <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -61,11 +67,9 @@
                     <td><%= data[i].numberOrder %></td>
                     <td><%= data[i].position1 %></td>
                     <td><%= data[i].status %></td>
-                   
-                  
                     <td>
                         <a href="/editpagecontrol/<%= data[i].generalID %>/<%= data[i].applicationID %>/<%= data3[i].contractID %>/<%= data4[i].drivingID %>/<%= data5[i].historyID %>/<%= data6[i].educationID %>/<%= data7[i].skillID %>" class="btn btn-success edit">Edit</a>
-<button type="button" id ="deleteDep" value="Delete" onclick = "DeleteData('<%= data[i].applicationID %>')" class="btn btn-danger delete deleteBtn">Delete</button>
+                        <button type="button" id ="deleteDep" value="Delete" onclick = "DeleteData('<%= data[i].applicationID %>')" class="btn btn-danger delete deleteBtn">Delete</button>
                     </td>
                 </tr>
               
@@ -77,12 +81,18 @@
     </div>
     </div>
 
-
 </form>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+</div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#Application').DataTable();
+    });
+</script>
+    
+   
 </body>
 
 </html>
