--- a/app/views/pages/edit-manpower.ejs
+++ b/app/views/pages/edit-manpower.ejs
@@ -115,10 +115,22 @@
 </head>
 
 <body>
-    <%- include ("../layouts/navbar.ejs") -%>
+    <div>
+    <%- include ("../layouts/sidebar.ejs") -%>
     </div>
+
+    <div class="content">
     <h1>Edit Data</h1>
     <form>
+
+        <label for="company"><b> Company :</b></label><br>
+        <select id="company">
+            <option  value="companyA" <% if (data.company === "companyA"){%> selected  <% } %>>companyA</option>
+            <option  value="companyB" <% if (data.company === "companyB"){%> selected  <% } %>>companyB</option>
+            <option  value="companyC" <% if (data.company === "companyC"){%> selected <% } %>>companyC</option>
+          </select>
+          <br>
+
         <label id="company" for="company"><b> Company :</b></label><br>
         <input type="radio" name="company" value="companyA" <% if (data.company === "companyA"){%> checked <% } %>> Company A<br>
         <input type="radio" name="company" value="companyB" <% if (data.company === "companyB"){%> checked <% } %>> Company B<br>
@@ -223,6 +235,7 @@
             onclick="UpdateData('<%= data.manPowerID %>')">UpdateData</button>
             <button type="button" class="btn btn-secondary"  ><a href="/manpower">Home</a> </button>
     </form>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
