--- a/app/views/pages/manpower.ejs
+++ b/app/views/pages/manpower.ejs
@@ -7,7 +7,9 @@
     <title>manpower</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
 
     <script>
         async function getData() {
@@ -52,7 +54,7 @@
 
             let response = await fetch(`http://localhost:8080/api/manpower/${id}`, {
                 method: 'delete',
-            
+
             })
                 .then(response => console.log(response))
                 .catch(err => console.log(err));
@@ -62,53 +64,76 @@
 </head>
 
 <body>
-    <%- include ("../layouts/navbar.ejs") -%>
-    <form >
-    </div>
-
-    <h1>ManPower</h1>
-    <a class="btn btn-secondary" href="/add">addData</a>
-    <div class="card-body">
-        <% if(data.length){ %>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">company</th>
-                    <th scope="col">department</th>
-                    <th scope="col">section</th>
-                    <th scope="col">positionRequired</th>
-                    <th scope="col">numberOrder</th>
-                    <th width="200px">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% for (let i = 0; i < data.length; i++){ %>
-                <tr>
-                    <th scope="row"><%= (i+1) %></th>
-                    <td><%= data[i].company %></td>
-                    <td><%= data[i].department %></td>
-                    <td><%= data[i].section %></td>
-                    <td><%= data[i].positionRequired %></td>
-                    <td><%= data[i].numberOrder %></td>
-                    <td>
-                        <a href="/edit/<%= data[i].manPowerID %>" class="btn btn-success edit">Edit</a>
-                        <a onclick="DeleteData('<%= data[i].manPowerID %>')" class="btn btn-danger delete">Delete</a>
-                    </td>
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
-        <% } %>
-    </div>
+    <div>
+        <%- include ("../layouts/sidebar.ejs") -%>
     </div>
 
 
-</form>
+    <div class="content">
+        <form>
+
+            <h2>ใบขอกำลังคน</h2>
+            <hr>
+            <a class="btn btn-secondary" href="/add">addData</a>
+       
+            <div class="card-body">
+                <% if(data.length){ %>
+                    <table id="manpower" class="table table-striped table-bordered" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">company</th>
+                                <th scope="col">department</th>
+                                <th scope="col">section</th>
+                                <th scope="col">positionRequired</th>
+                                <th scope="col">numberOrder</th>
+                                <th width="200px">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% for (let i=0; i < data.length; i++){ %>
+                                <tr>
+                                    <th scope="row">
+                                        <%= (i+1) %>
+                                    </th>
+                                    <td>
+                                        <%= data[i].company %>
+                                    </td>
+                                    <td>
+                                        <%= data[i].department %>
+                                    </td>
+                                    <td>
+                                        <%= data[i].section %>
+                                    </td>
+                                    <td>
+                                        <%= data[i].positionRequired %>
+                                    </td>
+                                    <td>
+                                        <%= data[i].numberOrder %>
+                                    </td>
+                                    <td>
+                                        <a href="/edit/<%= data[i].manPowerID %>" class="btn btn-success edit">Edit</a>
+                                        <a onclick="DeleteData('<%= data[i].manPowerID %>')"
+                                            class="btn btn-danger delete">Delete</a>
+                                    </td>
+                                </tr>
+                                <% } %>
+                        </tbody>
+                    </table>
+                    <% } %>
+            </div>
+    </div>
+    </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            $('#manpower').DataTable();
+        });
+    </script>
 </body>
 
 </html>
